# vertu-info-search

./: README.md  docker-build.sh  docker-compose.yml  pyproject.toml
app/: app.py  config.py
app/core/: database.py  exceptions.py  shared.py
app/services/semantic_search/: config.py  jobs.py  models.py  prompts.py  router.py  shared.py  utils.py
